--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-resource": "1.2.x",
     "bootstrap": "^3.2.0",
     "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "angular-modal-service": "~0.6.6"
   }
 }
