--- a/bower.json
+++ b/bower.json
@@ -5,14 +5,5 @@
   "homepage": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "private": true,
-  "dependencies": {
-    "angular": "1.2.x",
-    "angular-route": "1.2.x",
-    "angular-loader": "1.2.x",
-    "angular-resource": "1.2.x",
-    "bootstrap": "^3.2.0",
-    "angular-mocks": "~1.2.x",
-    "html5-boilerplate": "~4.3.0",
-    "angular-modal-service": "~0.6.6"
-  }
+  "dependencies": {}
 }
