--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,25 @@
 {
   "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "description": "FINE Proof of Concept met AngularJS",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
+  "homepage": "https://github.com/rfranken/FINEPOC",
   "license": "MIT",
-  "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "angular-bootstrap": "~0.13.0",
+    "angular-resource": "~1.4.0",
+    "angular-route": "~1.4.0",
+    "angular": "~1.4.0",
+    "bootstrap": "~3.3.4"
+  },
+  "authors": [
+    "Roel Franken <roelfranken@gmail.com>"
+  ],
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "app/bower_components",
+    "test",
+    "tests"
+  ]
 }
